more optimization: added React.lazy load for offscreen components, removed FA import (may be buggy)

--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -70,7 +70,7 @@ p {
 
 .homeHeroName {
   @extend sansFont;
-  font-size: 90px;
+  font-size: 78px;
   font-weight: 700;
   font-kerning: none;
   letter-spacing: -.5px;
